--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,6 @@ ENV/
 src/ocr/images/
 src/ocr/test/
 train/
+src/ocr/mnist/data/
+src/ocr/mnist/HWDB1.1trn_gnt_P1/
+src/ocr/mnist/HWDB1.1tst_gnt/
